@startuml Composite1
scale 1024 height
interface Component {
  Operation()
  Add(Component)
  Remove(Component)
  GetChild(int)
}
class Leaf {
  Operation()
}

class Composite {
  Operation()
  Add(Component)
  Remove(Component)
  GetChild(int)
}
note left of Composite::Operation
  forall g in children
    g.Operation()
end note

Client -> Component
Component <|-- Leaf
Component <|-- Composite
Component --o Composite : children

@enduml
